[package]
name = "bevy_typewriter"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
categories = ["game-development", "graphics"]
repository = "https://github.com/ickshonpe/bevy_typewriter"
readme = "README.md"
description = "bevy plugin to output text type writer style"

[dependencies]
bevy = { version = "0.8.0", features = [] }

[dev-dependencies]
bevy = "0.8.0"